# bigdata-chess

./: .gitignore  Cargo.toml  README.md  hive-setup.sql  redpanda-setup.sh
bigdata-chess-core/: Cargo.toml  build.rs
bigdata-chess-core/proto/: chess.proto
bigdata-chess-core/src/: config.rs  database.rs  entity.rs  game_parser.rs  lib.rs  lichess.rs  pgn.rs  queue.rs  storage.rs
bigdata-chess-postgres-import/: Cargo.toml
bigdata-chess-postgres-import/src/: lib.rs  main.rs  step.rs  utils.rs
bigdata-chess-spark/: infra.yaml  k8s.yaml  readme.md  spark.Dockerfile  values.yaml  zeppelin-server.yaml
bigdata-chess-steps/: Cargo.toml
bigdata-chess-steps/src/: chunk_splitter.rs  file_downloader.rs  game_parser.rs  hdfs_import.rs  lib.rs  main.rs  postgres_import.rs  progress.rs  storage_import.rs  update_checker.rs  utils.rs
bigdata-hn/: .gitignore  Cargo.toml  bag_of_words.json  readme.md
bigdata-hn/src/: bag_of_words.rs  categories.rs  clustering.rs  data_loading.rs  embeddings_saver.rs  hasher.rs  lemmatization.rs  main.rs  models.rs  sentiment.rs  tfidf_metric_calculator.rs  tfidf_stats_collector.rs  tokenization.rs  utils.rs
