[package]
name = "bigdata-chess-steps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
rdkafka = "0.29.0"
prost = "0.11.5"
base64 = "0.20.0"
tokio = { version = "1.23.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["json"] }
bigdata-chess-core = { path = "../bigdata-chess-core" }
