[package]
name = "bigdata-chess-steps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
rdkafka = "0.29.0"
prost = "0.11.5"
base64 = "0.20.0"
tokio = { version = "1.23.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["json"] }
csv = "1.1"
rand = "0.8.5"
url = "2.3.1"
futures-util = "0.3.25"
reqwest = "0.11.13"
serde_json = "1.0.89"
once_cell = "1.17.0"
shakmaty = "0.23.0"
prost-types = "0.11.5"
pgn-reader = "0.22.0"
chrono = "0.4.23"
histogram = "0.6.9"
bigdata-chess-core = { path = "../bigdata-chess-core" }
