[package]
name = "bigdata-hn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rdkafka = "0.29.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
indicatif = "0.17.3"
tokenizers = "0.13.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
pyo3 = { version = "0.18.0", features = ["auto-initialize"] }
murmur3 = "0.5.2"
rust-bert = "0.20.0"
bigdata-chess-core = { path = "../bigdata-chess-core" }